--- a/src/renderer/src/styles.scss
+++ b/src/renderer/src/styles.scss
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+/* reset.css */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, figure, figcaption, blockquote, dl, dd {
+  margin: 0;
+  padding: 0;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img, picture {
+  max-width: 100%;
+  display: block;
+}
+
+body {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
+  background-color: #f8f9fa;
+}
